add headerTypeCompatibility & payloadTypeCompatibility producer binding options